welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:22: error: 'case' expected but integer literal found.
            1 => ptitMotif(RED);
            ^PatternPicture:22: error: '}' expected but ';' found.
            1 => ptitMotif(RED);
                               ^PatternPicture:23: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
            2 => ptitMotif(BLUE);
            ^PatternPicture:24: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
            3 => ptitMotif(GREEN);
            ^PatternPicture:25: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
            4 => ptitMotif(YELLOW);
            ^PatternPicture:43: error: expected class or object definition
  ptitMotif()
  ^PatternPicture:44: error: eof expected but '}' found.
} 
^