welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
  def ptitMotif(c: Color){
    setCouleurBrosse(c)
    avance()
    baisseBrosse();leveBrosse();
    recule()
    gauche()
    avance()
    baisseBrosse();leveBrosse();
    recule()
    droite()
  }
  
  def motif(){
    for (i <- 1 to 2){
      
      for(j <- 1 to 2){
        
        for (k <- 1 to 4){
          
          k match{
            1 => ptitMotif(RED);
            2 => ptitMotif(BLUE);
            3 => ptitMotif(GREEN);
            4 => ptitMotif(YELLOW);
          }
          avance();avance();avance();gauche();

          }
          
        }
        
        
      }
      
      
    }
    
    
    
    
  }
  ptitMotif()
}